--- a/public/wedding-invite.html
+++ b/public/wedding-invite.html
@@ -3,7 +3,7 @@
 <h1> IT'S MY WEDDING !</h1>
 <h2>on the 25th May</h2>
 
-<img src="wedding.jpeg">
+<img src="../assets/images/wedding card.jpeg">
 
 <h3>What to bring :</h3>
 <ul>
