--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
 <p>Tel: +2349017323519</p>
 <p>Email: Jibrilmuhammad104@gmail.com</p>
-<p>Address: My country</p>
+<p>Address: Nigeria</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  My Country <br />
+  Ribado Road,<br />
+  Kano state,<br />
+  Nigeria. <br />
 </p>
