--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jibril's portfolio</title>
+    <title>My Resume.</title>
 </head>
 <body>
-    <hr>
-    <h1>Jibril Muhammad's portfolio.</h1>
-    <hr>
-<h2>I'm a web developer and here are some of the projects i have worked on.<br> ENJOY !</h2>
-<br>
-
+    <h1>Jibril Muhammad</h1>
+    <img src="./Mubarak1.jpg" height="200" alt="">
+    <ul>
+        <li><h4>Summary</h4>
+        I am an aspiring Front-end developer
+        </li>
 <hr>
+        <li><h4>Education</h4>
+        Currently a student at Bayero University, Kano. (2021 - )
+        </li>
 <hr>
-
-<h3><a href="./public/wedding-invite.html">Wedding Invite project.</a></h3>
-<img src="./assets/images/wedding invite.png" height="200" alt="wedding invite project preview"><br><br>
-
+        <li><h4>Work experience</h4>
+        I currently do not have any work experience.
+        </li>
 <hr>
+        <li><h4>Skills</h4>
+            <ul><li>Typing</li>
+                <li>A little bit of Microsoft word</li>
+            </ul>
+        </li>
 <hr>
+    </ul>
+    <a href="./contact.html">Contact Me</a>
+    <a href="./hobbies.html"> My hobbies</a>
 
-<h3><a href="./public/lecture-ranking.html">Lecture Ranking project</a></h3>
-    <img src="./assets/images/lecture ranking.png" height="200" alt="lecture ranking project preview">
-
-<hr>
-<hr>
-
-<a href="./public/about.html">About me</a>
-<a href="./public/contact.html">Contact me</a>
 </body>
 </html>
